DataScriptParser.py
# Generated from DataScript.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class DataScriptParser ( Parser ):

    grammarFileName = "DataScript.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'wczytaj_dane'", "'('", "')'", "';'", 
                     "'wyswietl'", "','", "'podzial_danych'", "'regresja_liniowa'", 
                     "'ocena_modelu'", "'srednia'", "'wykres_punktowy'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "STRING", "NUMBER", "WS" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_loadDataStatement = 2
    RULE_displayDataStatement = 3
    RULE_splitDataStatement = 4
    RULE_linearRegressionStatement = 5
    RULE_modelEvaluationStatement = 6
    RULE_meanStatement = 7
    RULE_pointPlotStatement = 8

    ruleNames =  [ "program", "statement", "loadDataStatement", "displayDataStatement", 
                   "splitDataStatement", "linearRegressionStatement", "modelEvaluationStatement", 
                   "meanStatement", "pointPlotStatement" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    STRING=12
    NUMBER=13
    WS=14

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(DataScriptParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DataScriptParser.StatementContext)
            else:
                return self.getTypedRuleContext(DataScriptParser.StatementContext,i)


        def getRuleIndex(self):
            return DataScriptParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = DataScriptParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 19 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 18
                self.statement()
                self.state = 21 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 4002) != 0)):
                    break

            self.state = 23
            self.match(DataScriptParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def loadDataStatement(self):
            return self.getTypedRuleContext(DataScriptParser.LoadDataStatementContext,0)


        def displayDataStatement(self):
            return self.getTypedRuleContext(DataScriptParser.DisplayDataStatementContext,0)


        def splitDataStatement(self):
            return self.getTypedRuleContext(DataScriptParser.SplitDataStatementContext,0)


        def linearRegressionStatement(self):
            return self.getTypedRuleContext(DataScriptParser.LinearRegressionStatementContext,0)


        def modelEvaluationStatement(self):
            return self.getTypedRuleContext(DataScriptParser.ModelEvaluationStatementContext,0)


        def meanStatement(self):
            return self.getTypedRuleContext(DataScriptParser.MeanStatementContext,0)


        def pointPlotStatement(self):
            return self.getTypedRuleContext(DataScriptParser.PointPlotStatementContext,0)


        def getRuleIndex(self):
            return DataScriptParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = DataScriptParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 32
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 25
                self.loadDataStatement()
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 2)
                self.state = 26
                self.displayDataStatement()
                pass
            elif token in [7]:
                self.enterOuterAlt(localctx, 3)
                self.state = 27
                self.splitDataStatement()
                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 4)
                self.state = 28
                self.linearRegressionStatement()
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 5)
                self.state = 29
                self.modelEvaluationStatement()
                pass
            elif token in [10]:
                self.enterOuterAlt(localctx, 6)
                self.state = 30
                self.meanStatement()
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 7)
                self.state = 31
                self.pointPlotStatement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LoadDataStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(DataScriptParser.STRING, 0)

        def getRuleIndex(self):
            return DataScriptParser.RULE_loadDataStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLoadDataStatement" ):
                listener.enterLoadDataStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLoadDataStatement" ):
                listener.exitLoadDataStatement(self)




    def loadDataStatement(self):

        localctx = DataScriptParser.LoadDataStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_loadDataStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 34
            self.match(DataScriptParser.T__0)
            self.state = 35
            self.match(DataScriptParser.T__1)
            self.state = 36
            self.match(DataScriptParser.STRING)
            self.state = 37
            self.match(DataScriptParser.T__2)
            self.state = 38
            self.match(DataScriptParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DisplayDataStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self, i:int=None):
            if i is None:
                return self.getTokens(DataScriptParser.STRING)
            else:
                return self.getToken(DataScriptParser.STRING, i)

        def getRuleIndex(self):
            return DataScriptParser.RULE_displayDataStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDisplayDataStatement" ):
                listener.enterDisplayDataStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDisplayDataStatement" ):
                listener.exitDisplayDataStatement(self)




    def displayDataStatement(self):

        localctx = DataScriptParser.DisplayDataStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_displayDataStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 40
            self.match(DataScriptParser.T__4)
            self.state = 41
            self.match(DataScriptParser.STRING)
            self.state = 46
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==6:
                self.state = 42
                self.match(DataScriptParser.T__5)
                self.state = 43
                self.match(DataScriptParser.STRING)
                self.state = 48
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 49
            self.match(DataScriptParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SplitDataStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(DataScriptParser.STRING, 0)

        def NUMBER(self):
            return self.getToken(DataScriptParser.NUMBER, 0)

        def getRuleIndex(self):
            return DataScriptParser.RULE_splitDataStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSplitDataStatement" ):
                listener.enterSplitDataStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSplitDataStatement" ):
                listener.exitSplitDataStatement(self)




    def splitDataStatement(self):

        localctx = DataScriptParser.SplitDataStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_splitDataStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 51
            self.match(DataScriptParser.T__6)
            self.state = 52
            self.match(DataScriptParser.T__1)
            self.state = 53
            self.match(DataScriptParser.STRING)
            self.state = 54
            self.match(DataScriptParser.T__5)
            self.state = 55
            self.match(DataScriptParser.NUMBER)
            self.state = 56
            self.match(DataScriptParser.T__2)
            self.state = 57
            self.match(DataScriptParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LinearRegressionStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self, i:int=None):
            if i is None:
                return self.getTokens(DataScriptParser.STRING)
            else:
                return self.getToken(DataScriptParser.STRING, i)

        def getRuleIndex(self):
            return DataScriptParser.RULE_linearRegressionStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLinearRegressionStatement" ):
                listener.enterLinearRegressionStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLinearRegressionStatement" ):
                listener.exitLinearRegressionStatement(self)




    def linearRegressionStatement(self):

        localctx = DataScriptParser.LinearRegressionStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_linearRegressionStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59
            self.match(DataScriptParser.T__7)
            self.state = 60
            self.match(DataScriptParser.T__1)
            self.state = 61
            self.match(DataScriptParser.STRING)
            self.state = 62
            self.match(DataScriptParser.T__5)
            self.state = 63
            self.match(DataScriptParser.STRING)
            self.state = 64
            self.match(DataScriptParser.T__2)
            self.state = 65
            self.match(DataScriptParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ModelEvaluationStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self, i:int=None):
            if i is None:
                return self.getTokens(DataScriptParser.STRING)
            else:
                return self.getToken(DataScriptParser.STRING, i)

        def getRuleIndex(self):
            return DataScriptParser.RULE_modelEvaluationStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterModelEvaluationStatement" ):
                listener.enterModelEvaluationStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitModelEvaluationStatement" ):
                listener.exitModelEvaluationStatement(self)




    def modelEvaluationStatement(self):

        localctx = DataScriptParser.ModelEvaluationStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_modelEvaluationStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self.match(DataScriptParser.T__8)
            self.state = 68
            self.match(DataScriptParser.T__1)
            self.state = 69
            self.match(DataScriptParser.STRING)
            self.state = 70
            self.match(DataScriptParser.T__5)
            self.state = 71
            self.match(DataScriptParser.STRING)
            self.state = 72
            self.match(DataScriptParser.T__2)
            self.state = 73
            self.match(DataScriptParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MeanStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(DataScriptParser.STRING, 0)

        def getRuleIndex(self):
            return DataScriptParser.RULE_meanStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMeanStatement" ):
                listener.enterMeanStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMeanStatement" ):
                listener.exitMeanStatement(self)




    def meanStatement(self):

        localctx = DataScriptParser.MeanStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_meanStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self.match(DataScriptParser.T__9)
            self.state = 76
            self.match(DataScriptParser.T__1)
            self.state = 77
            self.match(DataScriptParser.STRING)
            self.state = 78
            self.match(DataScriptParser.T__2)
            self.state = 79
            self.match(DataScriptParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PointPlotStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self, i:int=None):
            if i is None:
                return self.getTokens(DataScriptParser.STRING)
            else:
                return self.getToken(DataScriptParser.STRING, i)

        def getRuleIndex(self):
            return DataScriptParser.RULE_pointPlotStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPointPlotStatement" ):
                listener.enterPointPlotStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPointPlotStatement" ):
                listener.exitPointPlotStatement(self)




    def pointPlotStatement(self):

        localctx = DataScriptParser.PointPlotStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_pointPlotStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.match(DataScriptParser.T__10)
            self.state = 82
            self.match(DataScriptParser.T__1)
            self.state = 83
            self.match(DataScriptParser.STRING)
            self.state = 84
            self.match(DataScriptParser.T__5)
            self.state = 85
            self.match(DataScriptParser.STRING)
            self.state = 86
            self.match(DataScriptParser.T__5)
            self.state = 87
            self.match(DataScriptParser.STRING)
            self.state = 88
            self.match(DataScriptParser.T__2)
            self.state = 89
            self.match(DataScriptParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





